# embassy-rp2350-usb-serial

./: .gitignore  Cargo.toml  README.md  picotool-run.sh
.cargo/: config.toml
src/: main.rs
