[package]
edition = "2024"
name = "foc-test"
version = "0.1.0"
authors = ["Massimiliano Mantione <massimiliano.mantione@gmail.com>"]
resolver = "2"

[[bin]]
name = "foc-test"
test = false
bench = false

[dependencies]
#defmt = "0.3"
#defmt-rtt = "0.4"
#panic-probe = { version = "0.3", features = ["print-defmt"] }
panic-probe = { version = "0.3" }
embassy-usb-logger = "0.4.0"
embassy-usb = "0.4.0"
log = { version = "0.4" }
static_cell = "2.1.1"

embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
embedded-storage = "0.3.1"

cortex-m-rt = "0.7.3"

#embassy-executor = { version = "0.7", features = ["task-arena-size-1024", "arch-cortex-m", "executor-thread", "defmt", "executor-interrupt"] }
embassy-executor = { version = "0.7", features = ["task-arena-size-1024", "arch-cortex-m", "executor-thread", "executor-interrupt"] }
embassy-sync = { version = "0.6" }
#embassy-time = { version = "0.4", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-time = { version = "0.4" }
cortex-m = { version = "0.7.6" }
#embassy-rp = { version = "0.4", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp235xa"] }
embassy-rp = { version = "0.4", features = ["unstable-pac", "time-driver", "critical-section-impl", "rp235xa"] }
[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"
